# pmt-renovated

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .gitmodules  Android.bp  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  INSTALLING.md  LICENSE  README.md  RELEASE-TYPES.md  USAGE.md  android_genrule.sh  build.sh  manager.sh  reformat.sh
.githooks/: pre-commit  pre-push
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml
.github/workflows/: build.yml  deploy.yml  fetch-changes.yml
cmake/: generate_headers.cmake
docs/md/: building-from-source.md  documentation-mainpage.md  example-plugins.md  release-types.md  usage-guide.md  using-with-termux-and-adb.md  using-with-termux.md
docs/plugin-instructions/: AdvancedExamplePlugin.cpp  AsyncExamplePlugin.cpp  ExamplePlugin.cpp  SimpleExamplePlugin.cpp
docs/various/: documentation-mainpage.md
include/: buildInfo.hpp.in
include/CLI/: CLI11.hpp
include/PartitionManager/: PartitionManager.hpp  Plugin.hpp  lib.hpp
include/nlohmann/: json.hpp
src/: CMakeLists.txt  FunctionManager.cpp  Lib.cpp  Main.cpp  Out.cpp  PartitionManager.cpp
src/functions/: BackupFunction.cpp  CleanLogFunction.cpp  EraseFunction.cpp  FlashFunction.cpp  InfoFunction.cpp  MemoryTestFunction.cpp  PartitionSizeFunction.cpp  RealLinkPathFunction.cpp  RealPathFunction.cpp  RebootFunction.cpp  ShellFunction.cpp  TypeFunction.cpp  functions.hpp
src/plugins/: BackupPlugin.cpp  CMakeLists.txt  CleanLogPlugin.cpp  ErasePlugin.cpp  FlashPlugin.cpp  GptPlugin.cpp  GroupMetadataReaderPlugin.cpp  InfoPlugin.cpp  LpMetadataPlugin.cpp  MemoryTestPlugin.cpp  MetadataReaderPlugin.cpp  PartitionSizePlugin.cpp  ReReadTablePlugin.cpp  RealPathPlugin.cpp  RebootPlugin.cpp  TypePlugin.cpp
srclib/: CMakeLists.txt
srclib/libhelper/: Android.bp  CMakeLists.txt
srclib/libhelper/include/libhelper/: android.hpp  capsule.hpp  cmdline.hpp  definations.hpp  error.hpp  functions.hpp  lib.hpp  logging.hpp  macros.hpp  management.hpp  pure_tuple.hpp  random.hpp
srclib/libhelper/src/: Checkers.cpp  Classes.cpp  FileUtil.cpp  Sha256.cpp  Utilities.cpp
srclib/libhelper/tests/: test.cpp  test.sh
srclib/libopenpart/: Android.bp  CMakeLists.txt
srclib/libopenpart/include/libopenpart/: openpart.h
srclib/libopenpart/src/: core.c  gpt.c  internal.h  io.c  mount.c  utility.c
srclib/libopenpart/tests/: test.c  test.img
srclib/libpartition_map/: Android.bp  CMakeLists.txt
srclib/libpartition_map/include/libpartition_map/: builder.hpp  definations.hpp  functions.hpp  lib.hpp  partition.hpp  redefine_logging_macros.hpp  super.hpp  table_data_collection.hpp
srclib/libpartition_map/src/: Builder.cpp  DynamicPartitionTable.cpp  Getters.cpp  LogicalPartition.cpp  Magic.cpp  Partition.cpp  PartitionMap.cpp  PartitionTableData.cpp  Type.cpp
srclib/libpartition_map/tests/: test.cpp
